# patchpro-bot

./: .env.example  .gitignore  .patchpro.toml  .pre-commit-hook  .ruff.toml  AGENTIC_IMPLEMENTATION_SUMMARY.md  BUG_ANALYSIS.md  CONTRIBUTING.md  DEVELOPMENT.md  HANDOFF.md  Makefile  PRECOMMIT.md  README.md  README_INTEGRATION.md  TESTING.md  __init__.py  dev.ps1  dev.sh  findings.json  pyproject.toml  pytest.ini  requirements.txt  ruff-findings.json  ruff_test.json  semgrep-findings.json  semgrep.yml  test_agent_import.py  test_bug_demo.py  test_dedup.py  test_findings.json  test_sample.py  trace_viewer.py
.github/: copilot-instructions.md
docs/: AGENTIC_FEEDBACK_LOOP_RESULTS.md  AGENTIC_SYSTEM.md  AGENT_IMPLEMENTATION.md  ANALYSIS_ARCHITECTURE.md  BASELINE_RESULTS.md  BRANCH_COMPARISON.md  DEDUPLICATION_COMPLETE.md  DEMO_EVALUATION_GUIDE.md  FILE_DEDUPLICATION_PLAN.md  INTEGRATION_COMPLETE.md  INTEGRATION_SUCCESS.md  LOCAL_DEVELOPER_GUIDE.md  LOCAL_DEV_WORKFLOW.md  LOCAL_DEV_WORKFLOW_COMPLETE.md  MERGE_COMPLETE.md  MERGE_STRATEGY.md  PATH_TO_MVP.md  POD2_FULFILLMENT_ANALYSIS.md  POD3_REPOSITORY_STRATEGY.md  POD3_UPDATE_GUIDE.md  QUICK_REFERENCE.md  TRACE_ANALYSIS.md  TRACE_VIEWER_GUIDE.md  USAGE_MODES.md  VIDEO_DEMO_SCRIPT.md  agent_guide.md  requirements.md  requirements_document.docx
examples/: README.md  demo_workflow.sh
schemas/: findings.v1.json
scripts/: check_public_code.py  debug_diff_generation.py  demo_agentic_comparison.py  demo_agentic_mode.py  demo_agentic_simple.py  generate_test_fixtures.py  merge_findings.py  test_telemetry.py
src/: test_multi_findings.py
tests/: README.md  __init__.py  conftest.py  test_agent.py  test_agentic_core.py  test_agentic_e2e.py  test_agentic_self_correction.py  test_agentic_v2.py  test_analysis.py  test_diff.py  test_hello.py  test_hour1_components.py  test_hour2_integration.py  test_llm.py  test_models.py  test_patch_quality.py  test_patch_simple.py  test_patch_validator.py  test_run_ci.py  test_sample.py
(+51 files in other folders)
