[project]
name = "patchpro-bot"
version = "0.0.1"
requires-python = ">=3.12"
description = "CI code-repair assistant (comment-only in Sprint-0)"
readme = "README.md"
dependencies = [
  "ruff==0.5.7",
  "semgrep==1.84.0",
  "typer==0.12.3",
  "pydantic==2.8.2",
  "rich==13.7.1",
  "httpx==0.27.2",
  "openai>=1.0.0"
]

[project.scripts]
patchpro = "patchpro_bot.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"